<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/white"
    tools:context=".LogIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/mediumgrey"
        android:textStyle="bold|italic"
        android:text="@string/log_in_message"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/edt_background"
        android:layout_marginTop="250dp"
        android:hint="@string/email"
        android:textColor="@color/grey"
        android:textColorHint="@color/mediumgrey"
        android:layout_marginHorizontal="20dp"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/edt_background"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColor="@color/grey"
        android:textColorHint="@color/mediumgrey"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:id="@+id/text_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/forgot_password"
        android:textSize="17.5sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/text_version"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/log_in"
        android:background="@drawable/btn_background"/>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize = "20sp"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text_version"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>