<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_password_background"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/white"
    tools:context=".ForgotPassword">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/edt_background"
        android:hint="@string/email"
        android:textColor="@color/grey"
        android:textColorHint="@color/mediumgrey"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="150dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_email"
        android:background="@drawable/btn_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/lightblue"
        android:textStyle="bold|italic"
        android:textSize = "20sp"
        android:layout_below="@id/btn_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/text_version"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>